load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)
load("@config_settings//:info.bzl", "ghc_version")

haskell_test(
    name = "spec",
    srcs = glob(['common/**/*.hs']) +
           (glob(['linear-types/**/*.hs']) if ghc_version == "9.0.1" else
            glob(['no-linear-types/**/*.hs'])
           ),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    deps = [
        "//jni",
        "//jvm",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:hspec",
        "@stackage//:text",
        "@stackage//:QuickCheck",
        "@stackage//:quickcheck-unicode",
        "@stackage//:unix",
        "@stackage//:vector",
    ] +
    (["@stackage//:linear-base"] if ghc_version == "9.0.1" else []),
    size = "small",
    plugins = ["//:inline-java-plugin"],
    tools = ["@hspec-discover//:bin"],
)
