load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)

haskell_test(
    name = "spec",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    deps = [
        "//jni",
        "//jvm",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:hspec",
        "@stackage//:linear-base",
        "@stackage//:text",
        "@stackage//:QuickCheck",
        "@stackage//:quickcheck-unicode",
        "@stackage//:unix",
        "@stackage//:vector",
    ],
    size = "small",
    plugins = ["//:inline-java-plugin"],
    tools = ["@hspec-discover//:bin"],
)
