load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)

haskell_test(
    name = "spec",
    size = "small",
    srcs = glob(["**/*.hs"]),
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    extra_srcs = ["@openjdk//:rpath"],
    plugins = ["//:inline-java-plugin"],
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//:inline-java",
        "//jni",
        "//jvm",
        "@stackage//:QuickCheck",
        "@stackage//:base",
        "@stackage//:hspec",
        "@stackage//:linear-base",
        "@stackage//:quickcheck-unicode",
        "@stackage//:text",
        "@stackage//:unix",
        "@stackage//:vector",
    ],
)
