load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)
load("@config_settings//:info.bzl", "ghc_version")

haskell_binary(
    name = "bench",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "//jvm",
        "//jni",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:criterion",
        "@stackage//:deepseq",
        "@stackage//:text",
    ] +
    (["@stackage//:singletons"] if ghc_version == "8.10.1" else []),
    plugins = ["//:inline-java-plugin"],
)
