load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

java_deps = [
    "@maven//:org_apache_commons_commons_collections4_4_1",
    ]

java_binary(
    name = "jar",
    main_class = "bogus",
    visibility = ["//visibility:public"],
    runtime_deps = java_deps,
)

haskell_binary(
    name = "classpath",
    srcs = ['Main.hs'],
    extra_srcs = ["@openjdk//:rpath"],
    ghcopts = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "//jvm",
        "//jni",
        "//:inline-java",
        "@rules_haskell//tools/runfiles",
        "@stackage//:base",
        "@stackage//:text",
    ] + java_deps,
    data = [
        ":jar_deploy.jar",
    ],
    plugins = ["//:inline-java-plugin"],
)
