name:                classpath
version:             0.1
synopsis:            An example application showing how to set the classpath for inline-java.
author:              EURL Tweag
maintainer:          facundo.dominguez@tweag.io
copyright:           2017 EURL Tweag.
build-type:          Custom
cabal-version:       >=1.18

custom-setup
  setup-depends: Cabal>=1.18, base<5, inline-java

executable classpath
  main-is:             Main.hs
  build-depends:       base<5, jni, inline-java, template-haskell
  default-language:    Haskell2010
