name:                directory-server
version:             0.0.1
synopsis:            Complete JNI raw bindings.
description:         Please see README.md.
homepage:            https://github.com/tweag/inline-java/tree/master/jni#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2019 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/tweag/inline-java
  subdir: jni

executable directory-server
  main-is: server.hs
  hs-source-dirs: src
  ghc-options: -threaded
  build-depends:
    base,
    directory,
    exceptions,
    filepath,
    inline-java,
    jni,
    jvm,
    linear-base,
    monad-logger,
    mtl,
    text,
    unix
  other-modules:
    Directory.Server
    Directory.Server.Http
    Directory.Server.Monad
    Directory.Server.Monad.Classes
