name:                hello-java
version:             0.6.2
synopsis:            Example application to demonstrate calling Java from Haskell
description:         Please see README.md.
homepage:            http://github.com/tweag/hello-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          facundo.dominguez@tweag.io
copyright:           2017 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tweag/hello-java

executable hello-java
  main-is: hello-java.hs
  build-depends:
    base > 4.9.0.0 && < 5,
    jni >= 0.4,
    jvm >= 0.3,
    inline-java >= 0.7.0,
    text >=1.2
  default-language: Haskell2010
