load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_test",
)
load("@config_settings//:info.bzl", "ghc_version")

haskell_test(
    name = "spec",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    timeout = "short",
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//jni",
        "@stackage//:base",
        "@stackage//:hspec",
    ] +
    ([] if ghc_version == "9.0.1" else ["@stackage//:singletons"]),
)
