load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

haskell_binary(
    name = "bench",
    srcs = glob(['**/*.hs'], exclude = ["Main.hs"]),
    main_file = "MainBazel.hs",
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "//jvm",
        "//jni",
        "//jvm-streaming",
        "@stackage//:base",
        "@stackage//:criterion",
        "@stackage//:deepseq",
        "@stackage//:streaming",
        "@stackage//:text",
        "@stackage//:vector",
    ],
    tags = ["skip_with_ghc_9_0_1"],
)
