load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)
load("@config_settings//:info.bzl", "ghc_version")

haskell_binary(
    name = "bench",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "//jvm",
        "//jni",
        "@stackage//:base",
        "@stackage//:criterion",
        "@stackage//:deepseq",
        "@stackage//:text",
    ] +
    (["@stackage//:singletons"] if ghc_version == "8.10.2" else []),
    tags = ["skip_with_ghc_9_0_1"],
)
