load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

haskell_binary(
    name = "bench",
    srcs = glob(["**/*.hs"]),
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    extra_srcs = ["@openjdk//:rpath"],
    deps = [
        "//jni",
        "//jvm",
        "@stackage//:base",
        "@stackage//:criterion",
        "@stackage//:deepseq",
        "@stackage//:singletons",
        "@stackage//:text",
    ],
)
