load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_test",
)

haskell_test(
    name = "spec",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
    ],
    timeout = "short",
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//jvm",
        "//jni",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:text",
    ],
)
