load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_test",
)

haskell_test(
    name = "spec",
    srcs = glob(['**/*.hs']),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    timeout = "short",
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//jvm",
        "//jni",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:QuickCheck",
        "@stackage//:quickcheck-text",
        "@stackage//:quickcheck-unicode",
        "@stackage//:text",
    ],
)
