load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)

haskell_test(
    name = "spec",
    timeout = "short",
    srcs = glob(["**/*.hs"]),
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
        "-threaded",
    ],
    extra_srcs = ["@openjdk//:rpath"],
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//jni",
        "//jvm",
        "@stackage//:QuickCheck",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:quickcheck-text",
        "@stackage//:quickcheck-unicode",
        "@stackage//:text",
    ],
)
