name:                hello
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2016 EURL Tweag
build-type:          Simple
cabal-version:       >=1.10

executable hello
  main-is:             Hello.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
