load(
  "@io_tweag_rules_haskell//haskell:haskell.bzl",
  "haskell_test",
)

haskell_test(
    name = "spec",
    srcs = glob(["**/*.hs"]),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
    ],
    size = "small",
    plugins = ["//:inline-java-plugin"],
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//:inline-java",
        "//jvm",
        "//jvm-batching",
        "//jvm-batching:jar",
        "//jvm-streaming",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:streaming",
        "@stackage//:text",
        "@stackage//:vector",
    ],
    # Failing test. TODO Reenable.
    tags = ["manual"],
)
