load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_test",
)

haskell_test(
    name = "spec",
    srcs = glob(["**/*.hs"]),
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-DHSPEC_DISCOVER=$(location @hspec-discover//:bin)",
		"-threaded",
    ],
    size = "small",
    plugins = ["//:inline-java-plugin"],
    tools = ["@hspec-discover//:bin"],
    deps = [
        "//:inline-java",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "//jvm-streaming",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:streaming",
        "@stackage//:text",
        "@stackage//:vector",
    ],
    tags = ["skip_with_ghc_9_0_1"],
)
